Fix a resource getting issue. Now resources should be read properly in jars.